Add storage system; Add user system; Add overview for Wizard

--- a/PirateTools.TravelExpense.WebApp/wwwroot/index.html
+++ b/PirateTools.TravelExpense.WebApp/wwwroot/index.html
@@ -3,10 +3,13 @@
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>PirateTools.TravelExpense.WebApp</title>
+
+        <title>Reisekostentool</title>
         <base href="/" />
+
         <link rel="stylesheet" href="css/app.css" />
         <link rel="stylesheet" href="css/bootstrap-5.3.2-dist/css/bootstrap.min.css" />
+        <link rel="stylesheet" href="Resources/IconFonts/bootstrap-icons/bootstrap-icons.min.css" />
     </head>
 
     <body style="height: 100%;">
