--- a/PirateTools.TravelExpense.WebApp/wwwroot/index.html
+++ b/PirateTools.TravelExpense.WebApp/wwwroot/index.html
@@ -7,6 +7,7 @@
         <title>Reisekostentool</title>
         <base href="/" />
 
+        <link rel="stylesheet" href="PirateTools.TravelExpense.WebApp.styles.css" />
         <link rel="stylesheet" href="css/app.css" />
         <link rel="stylesheet" href="css/bootstrap-5.3.2-dist/css/bootstrap.min.css" />
         <link rel="stylesheet" href="Resources/IconFonts/bootstrap-icons/bootstrap-icons.min.css" />
