Add option to paste image from clipboard on supported browsers, closes #6

--- a/PirateTools.TravelExpense.WebApp/wwwroot/index.html
+++ b/PirateTools.TravelExpense.WebApp/wwwroot/index.html
@@ -27,6 +27,8 @@
             <a href="" class="reload">Reload</a>
             <a class="dismiss">🗙</a>
         </div>
+
         <script src="/_framework/blazor.webassembly.js" type="text/javascript"></script>
+        <script src="_content/ClipLazor/clipboard.min.js"></script>
     </body>
 </html>
